--- a/angular_02/src/app/app.component.html
+++ b/angular_02/src/app/app.component.html
@@ -5,4 +5,6 @@
     <div class="Small shadow p-3 mb-5 rounded text-danger">
         <app-warning-alert></app-warning-alert>
     </div>
+    <app-server></app-server>
+    <app-username-task></app-username-task>
 </div>
