feat: Learning Angular - Task Display

--- a/angular_02/src/app/app.component.html
+++ b/angular_02/src/app/app.component.html
@@ -1,10 +1,13 @@
-<div class="container">
-    <div class="Small shadow p-3 mb-5 rounded text-success">
-        <app-success-alert></app-success-alert>
+<div class="p-5 d-flex justify-content-center align-items-center flex-column w-100">
+    <div class="d-flex justify-content-center align-items-center flex-column w-100">
+        <div class="Small shadow p-3 mb-5 rounded text-success">
+            <app-success-alert></app-success-alert>
+        </div>
+        <div class="Small shadow p-3 mb-5 rounded text-danger">
+            <app-warning-alert></app-warning-alert>
+        </div>
+        <app-server></app-server>
+        <app-username-task></app-username-task>
+        <app-display></app-display>
     </div>
-    <div class="Small shadow p-3 mb-5 rounded text-danger">
-        <app-warning-alert></app-warning-alert>
-    </div>
-    <app-server></app-server>
-    <app-username-task></app-username-task>
 </div>
