--- a/angular_02/src/app/components/display/display.component.html
+++ b/angular_02/src/app/components/display/display.component.html
@@ -10,3 +10,17 @@
         Attempt nº: {{ value }}
     </span>
 </div>
+
+<div class="Small shadow p-3 mb-5 rounded text-primary d-flex flex-column">
+    <button class="btn btn-primary m-3" (click)="showPassword2()">Display Details</button>
+    <span *ngIf="showPass2 === true">Secret Password = 'Tuna'</span>
+    <span 
+        *ngFor="let time of timestamp; let i = index" 
+        class="d-flex flex-column m-3 p-3 rounded"
+        [ngClass]="{afterFive: i >= 4}"
+        [ngStyle]="{backgroundColor: i >= 4 ? 'blue' : ''}"
+    >
+        Attempt nº: {{ time }}
+    </span>
+</div>
+
