feat: Multiple Charts

--- a/angular_04_echarts/src/app/app.component.html
+++ b/angular_04_echarts/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-chart01></app-chart01>
+<app-chart01 [cardProp]="card01ID"></app-chart01>
+<app-chart01 [cardProp]="card02ID"></app-chart01>
+<app-chart01 [cardProp]="card03ID"></app-chart01>
+
