--- a/angular_04_echarts/src/app/components/pie-chart/pie-chart.component.html
+++ b/angular_04_echarts/src/app/components/pie-chart/pie-chart.component.html
@@ -1,2 +1,1 @@
-<div id={{cardProp}} style="width: 900px; height: 500px;">
-</div>
+<div id={{cardProp}} style="width: 900px; height: 500px;"></div>
