feat: Sending dynamic queries to the backend

--- a/angular_04_echarts/src/app/components/chart01/chart01.component.html
+++ b/angular_04_echarts/src/app/components/chart01/chart01.component.html
@@ -38,7 +38,8 @@
         [cardProp]="cardProp"
         [userOptions]="userOptions"
         [chartOption]="chartOption"
-        [tableOption]="tableOption">
+        [tableOption]="tableOption"
+        [userOptionsToDB]="userOptionsToDB">
     </app-pie-chart>
 
     <app-bar-chart 
@@ -46,6 +47,7 @@
         [cardProp]="cardProp"
         [userOptions]="userOptions"
         [chartOption]="chartOption"
-        [tableOption]="tableOption">
+        [tableOption]="tableOption"
+        [userOptionsToDB]="userOptionsToDB">
     </app-bar-chart>
 </div>
