--- a/angular_04_echarts/src/app/components/chart01/chart01.component.html
+++ b/angular_04_echarts/src/app/components/chart01/chart01.component.html
@@ -63,15 +63,16 @@
 
     <!-- Legend: 
         cardProp -> (en) Send the chart ID
-        userOptions -> (en) Send the options selected by the user
+        userOptions -> (en) Send the options selected by the user, for visualization
+        userOptionsToDB -> (en) Send the options selected by the user, using the correct database names
         chartOption -> (en) Send the chart chosen by the user
     -->
 
     <app-pie-chart *ngIf="chartOption === 'pie'" [cardProp]="cardProp" [userOptions]="userOptions"
-        [chartOption]="chartOption" [tableOption]="tableSelected" [userOptionsToDB]="userOptionsToDB">
+        [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB">
     </app-pie-chart>
 
     <app-bar-chart *ngIf="chartOption === 'bar'" [cardProp]="cardProp" [userOptions]="userOptions"
-        [chartOption]="chartOption" [tableOption]="tableSelected" [userOptionsToDB]="userOptionsToDB">
+        [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB">
     </app-bar-chart>
 </div>
