--- a/angular_04_echarts/src/app/app.component.html
+++ b/angular_04_echarts/src/app/app.component.html
@@ -1,32 +1,7 @@
 <section class="d-flex flex-column px-3">
-    <header class="col-md-12 position-fixed z-1 d-flex align-items-center flex-row h-90 bg-white">
-        <div class="w-256 d-flex justify-content-start align-items-center h-90">
-            <img src="../assets/logo.png"
-                alt="Logo da empresa Di2win, em letras pretas, com o número 2 em cor rosa, e um icone rosa a frente">
-        </div>
-        <div class="flex-grow-1 d-flex flex-row justify-content-end ms-4 pe-5 h-90">
-            <div class="d-flex justify-content-center align-items-center flex-column">
-                <p class="m-0 me-3 w-100">Olá, <span class="text-pink fw-medium">{{username}}</span></p>
-                <span class="w-100 text-end me-5 small">{{profileType}}</span>
-            </div>
-            <div class="w-60 d-flex justify-content-center align-items-center">
-                <img class="w-100 rounded rounded-circle" src={{profile_picture}} alt="Foto de perfil do usuário">
-            </div>
-        </div>
-    </header>
-    <div class="w-256 position-fixed z-1 h-100 mt-6">
-        <app-sidebar></app-sidebar>
-    </div>
+    <app-navbar [username]="username" [profileType]="profileType" [profile_picture]="profile_picture"></app-navbar>
+    <app-sidebar></app-sidebar>
     <article class="p-1 w-75 ms-17 mt-6">
-        <!-- mx-auto centraliza -->
-        <div class="p-2 my_chart_lg col-md-12 col-lg-10 Small shadow h-450 rounded rounded-lg border-pink">
-            <app-chart01 [cardProp]="card01ID"></app-chart01>
-        </div>
-        <div class="p-2 my_chart_lg col-md-12 col-lg-10 Small shadow h-450 rounded rounded-lg border-pink">
-            <app-chart01 [cardProp]="card02ID"></app-chart01>
-        </div>
-        <div class="p-2 my_chart_lg col-md-12 col-lg-10 Small shadow h-450 rounded rounded-lg border-pink">
-            <app-chart01 [cardProp]="card03ID"></app-chart01>
-        </div>
+        <app-dashboard [card01]="card01" [card02]="card02" [card03]="card03"></app-dashboard>
     </article>
 </section>
