--- a/angular_04_echarts/src/app/components/page/dashboard/dashboard.component.html
+++ b/angular_04_echarts/src/app/components/page/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
 <!-- mx-auto centraliza -->
-<div class="p-2 my_chart_lg col-md-12 col-lg-10 Small shadow h-450 rounded rounded-lg border-pink">
+<div class="position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
     <app-select-chart [cardID]="card01"></app-select-chart>
 </div>
-<div class="p-2 my_chart_lg col-md-12 col-lg-10 Small shadow h-450 rounded rounded-lg border-pink">
+<div class="position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
     <app-select-chart [cardID]="card02"></app-select-chart>
 </div>
-<div class="p-2 my_chart_lg col-md-12 col-lg-10 Small shadow h-450 rounded rounded-lg border-pink">
+<div class="position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
     <app-select-chart [cardID]="card03"></app-select-chart>
 </div>
