--- a/angular_04_echarts/src/app/components/select-chart/select-chart.component.html
+++ b/angular_04_echarts/src/app/components/select-chart/select-chart.component.html
@@ -1,70 +1,57 @@
-<!-- user-choice.component.html -->
-<!-- <div *ngFor="let table of tableData">
-    <button (click)="selectTableAndShowColumn(table)" [ngSwitch]="table">
-        <ng-container *ngSwitchCase="'users'">Usuários</ng-container>
-        <ng-container *ngSwitchCase="'extracts'">Extratos</ng-container>
-        <ng-container *ngSwitchDefault>{{table}}</ng-container>
-    </button>
-</div> -->
+<div class="h-100 rounded rounded-lg w-100">
 
+    <!-- (en) Columns options -->
+    <article *ngIf="setColumnOptions" class="z-1 m-0 h-100 position-absolute w-100 row">
+        <div class="col-9 backdrop w-75">
+            <h1 class="block m-2 fs-6 normal px-4 pt-3 pb-2 text-white">Selecione as colunas</h1>
+            <div class="w-50 max-w-200 h-300 overflow-y-auto mx-4 py-2">
+                <section class="d-flex justify-content-center align-items-start flex-column gap-2">
+                    <div *ngFor="let column of UsersColumnsOption" class="w-100">
+                        <button (click)="setOption(column)"
+                            class="w-100 btn text-12 rounded rounded-lg bg-pink text-white p-2" [ngSwitch]="column">
+                            <ng-container *ngSwitchCase="'id'">ID</ng-container>
+                            <ng-container *ngSwitchCase="'name'">Usuário</ng-container>
+                            <ng-container *ngSwitchCase="'segment'">Segmento</ng-container>
+                            <ng-container *ngSwitchDefault>{{column}}</ng-container>
+                        </button>
+                    </div>
+                    <div *ngFor="let column of ExtractsColumnsOption" class="w-100">
+                        <button (click)="setOption(column)"
+                            class="w-100 btn text-12 rounded rounded-lg bg-pink text-white p-2" [ngSwitch]="column">
+                            <ng-container *ngSwitchCase="'id'">ID</ng-container>
+                            <ng-container *ngSwitchCase="'created_at'">Data de Criação</ng-container>
+                            <ng-container *ngSwitchCase="'pages_process'">Páginas Processadas</ng-container>
+                            <ng-container *ngSwitchCase="'doc_type'">Tipo de Documento</ng-container>
+                            <ng-container *ngSwitchCase="'user_id'">ID do Usuário</ng-container>
+                            <ng-container *ngSwitchCase="'doc_count'">Documentos Processados</ng-container>
+                            <ng-container *ngSwitchDefault>{{column}}</ng-container>
+                        </button>
+                    </div>
+                </section>
+            </div>
 
-<!-- <div class="d-flex flex-column w-25">
-    <span>Escolha as colunas</span>
-    <button *ngIf="!showChartOptions" (click)="setOption('Documentos')"
-        [ngStyle]="userOptions.includes('doc_type') ? {'background-color': 'lightgray', 'pointer-events': 'none'} : {}">
-        Escolher opção Documentos
-    </button>
-    <button *ngIf="!showChartOptions" (click)="setOption('Documentos processados')"
-        [ngStyle]="userOptions.includes('quant') ? {'background-color': 'lightgray', 'pointer-events': 'none'} : {}">
-        Escolher opção Quantidade de Documentos Processados
-    </button>
-    <button *ngIf="selectedOptions >= 2" (click)="openChart()">
-        Proximo
-    </button>
-</div> -->
+            <div class="w-50 max-w-200 mx-4 d-flex align-items-start justify-content-center flex-column gap-2">
 
-<section class="my_chartOptions">
-    <div>
-        <button class="btn text-14 rounded rounded-lg bg-pink text-white p-2" (click)="resetData()">Limpar</button>
-    </div>
-    <div>
-        colunas
-        <div *ngFor="let column of ExtractsColumnsOption">
-            <button (click)="setOption(column)" class="btn text-14 rounded rounded-lg bg-pink text-white p-2 mb-2" [ngSwitch]="column">
-                <ng-container *ngSwitchCase="'id'">ID</ng-container>
-                <ng-container *ngSwitchCase="'created_at'">Data de Criação</ng-container>
-                <ng-container *ngSwitchCase="'pages_process'">Páginas Processadas</ng-container>
-                <ng-container *ngSwitchCase="'doc_type'">Tipo de Documento</ng-container>
-                <ng-container *ngSwitchCase="'user_id'">ID do Usuário</ng-container>
-                <ng-container *ngSwitchCase="'doc_count'">Documentos Processados</ng-container>
-                <ng-container *ngSwitchDefault>{{column}}</ng-container>
-            </button>
+                <button class="w-100 btn text-14 rounded rounded-lg bg-pink text-white p-2" *ngIf="selectedOptions >= 2"
+                    (click)="openChart()">
+                    Proximo
+                </button>
+
+                <select *ngIf="(showChartOptions) && (selectedOptions == 2)" (change)="setChart($event)" name="chart"
+                    id="chart" class="select rounded rounded-lg bg-pink text-white p-2 w-100 pointer">
+                    <option value="" disabled selected>Selecione um gráfico</option>
+                    <option value="pie">Pizza</option>
+                    <option value="bar">Barras</option>
+                </select>
+            </div>
         </div>
-        <div *ngFor="let column of UsersColumnsOption">
-            <button (click)="setOption(column)" class="btn text-14 rounded rounded-lg bg-pink text-white p-2 mb-2" [ngSwitch]="column">
-                <ng-container *ngSwitchCase="'id'">ID</ng-container>
-                <ng-container *ngSwitchCase="'name'">Usuário</ng-container>
-                <ng-container *ngSwitchCase="'segment'">Segmento</ng-container>
-                <ng-container *ngSwitchDefault>{{column}}</ng-container>
-            </button>
+        <div class="backdrop col p-2 gap-2 d-flex align-items-end justify-content-start flex-column">
+            <button class="btn text-14 rounded rounded-lg bg-pink text-white p-2" (click)="resetData()">Limpar</button>
+            <button class="btn text-14 rounded rounded-lg bg-gray text-white p-2"
+                (click)="closeColumnOptions()">Fechar</button>
         </div>
-    </div>
+    </article>
 
-    <button *ngIf="selectedOptions >= 2" (click)="openChart()">
-        Proximo
-    </button>
-
-    <button *ngIf="(showChartOptions) && (selectedOptions == 2)" (click)="setChart('pie')">
-        Escolher opção pieChart
-    </button>
-
-    <button *ngIf="(showChartOptions) && (selectedOptions == 2)" (click)="setChart('bar')">
-        Escolher opção barChart
-    </button>
-</section>
-
-
-<div class="chartContainer">
 
     <!-- Legend: 
         cardID -> (en) Send the chart ID
@@ -73,11 +60,21 @@
         chartOption -> (en) Send the chart chosen by the user
     -->
 
-    <app-pie-chart *ngIf="chartOption === 'pie'" [cardID]="cardID" [userOptions]="userOptions"
-        [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB">
-    </app-pie-chart>
+    <!-- (en) Calling the user-chosen graph -->
 
-    <app-bar-chart *ngIf="chartOption === 'bar'" [cardID]="cardID" [userOptions]="userOptions"
-        [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB">
-    </app-bar-chart>
+    <article class="position-relative w-100 h-100">
+        <div *ngIf="!setColumnOptions"
+            class="z-1 position-absolute w-100 d-flex align-items-center justify-content-end p-2">
+            <button class="btn text-14 rounded rounded-lg bg-pink text-white p-2"
+                (click)="openColumnOptions()">Editar</button>
+        </div>
+        <section class="d-flex align-items-center justify-content-center w-100 h-100">
+            <app-pie-chart *ngIf="chartOption === 'pie'" [cardID]="cardID" [userOptions]="userOptions"
+                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB">
+            </app-pie-chart>
+            <app-bar-chart *ngIf="chartOption === 'bar'" [cardID]="cardID" [userOptions]="userOptions"
+                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB">
+            </app-bar-chart>
+        </section>
+    </article>
 </div>
