--- a/angular_04_echarts/src/app/components/page/dashboard/dashboard.component.html
+++ b/angular_04_echarts/src/app/components/page/dashboard/dashboard.component.html
@@ -1,10 +1,1 @@
-<!-- mx-auto centraliza -->
-<div class="position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
-    <app-select-chart [cardID]="card01"></app-select-chart>
-</div>
-<div class="position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
-    <app-select-chart [cardID]="card02"></app-select-chart>
-</div>
-<div class="position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
-    <app-select-chart [cardID]="card03"></app-select-chart>
-</div>
+<h1>Dashboard</h1>
