--- a/angular_04_echarts/src/app/components/page/favorite/favorite.component.css
+++ b/angular_04_echarts/src/app/components/page/favorite/favorite.component.css
@@ -3,5 +3,5 @@
 }
 
 .grid-template{
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
 }
