--- a/angular_04_echarts/src/app/components/page/favorite/favorite.component.html
+++ b/angular_04_echarts/src/app/components/page/favorite/favorite.component.html
@@ -1,12 +1,12 @@
 <!-- mx-auto centraliza -->
 <section class="w-100 h-100 grid grid-template gap-3">
-    <div class="w-100 position-relative col-md-12 col-lg-10 shadow rounded rounded-lg border-pink">
+    <div class="overflow-auto w-100 position-relative col-md-12 col-lg-10 shadow rounded rounded-lg border-pink">
         <app-select-chart [cardID]="card01"></app-select-chart>
     </div>
-    <div class="w-100 position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
+    <div class="overflow-auto w-100 position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
         <app-select-chart [cardID]="card02"></app-select-chart>
     </div>
-    <div class="w-100 position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
+    <div class="overflow-auto w-100 position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
         <app-select-chart [cardID]="card03"></app-select-chart>
     </div>
 </section>
