--- a/angular_04_echarts/src/app/components/page/favorite/favorite.component.html
+++ b/angular_04_echarts/src/app/components/page/favorite/favorite.component.html
@@ -9,4 +9,19 @@
     <div class="overflow-auto w-100 position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
         <app-select-chart [cardID]="card03"></app-select-chart>
     </div>
+    <div class="overflow-auto w-100 position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
+        <app-select-chart [cardID]="card04"></app-select-chart>
+    </div>
+    <div class="overflow-auto w-100 position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
+        <app-select-chart [cardID]="card05"></app-select-chart>
+    </div>
+    <div class="overflow-auto w-100 position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
+        <app-select-chart [cardID]="card06"></app-select-chart>
+    </div>
+    <div class="overflow-auto w-100 position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
+        <app-select-chart [cardID]="card07"></app-select-chart>
+    </div>
+    <div class="overflow-auto w-100 position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
+        <app-select-chart [cardID]="card08"></app-select-chart>
+    </div>
 </section>
