feat: Adding an empty 'chart' and a 'chart' with no data.

--- a/angular_04_echarts/src/app/components/bar-chart/bar-chart.component.html
+++ b/angular_04_echarts/src/app/components/bar-chart/bar-chart.component.html
@@ -1,3 +1,4 @@
 <p *ngIf="showChartTitle != ''" class="h-55 w-100 d-flex justify-content-center align-items-center small p-2 position-absolute"><span class="w-75 text-center">{{showChartTitle}}</span></p>
-<div id="{{cardID}}" class="chart" *ngIf="dataColumns != []"></div>
+<div id={{cardID}} class="chart" *ngIf="dataColumns != [] && isDataUsingFilter === true"></div>
 <app-loading *ngIf="dataColumns === []"></app-loading>
+<app-empty-chart *ngIf="isDataUsingFilter === false" [title]="'Nenhum resultado!'" [text]="'Esta pode ser a resposta que você está procurando. Caso contrário, tente Remover ou alterar seus filtros para torná-los menos específicos.'"></app-empty-chart>
